--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Edura
+edura_core/app/data/
+edura_core/app/videos/
+
 # Python
 __pycache__/
 *.pyc
